Added transition on page load

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(50%);
+        opacity: 0; 
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.slideUpFromBottomSlow{
+    animation: 1s ease-out 0s 1 slideInFromBottom;
+}
+
+.slideUpFromBottomFast{
+    animation: 0.5s ease-out 0s 1 slideInFromBottom;
+}
