--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,3 +21,18 @@
 .slideUpFromBottomFast{
     animation: 0.5s ease-out 0s 1 slideInFromBottom;
 }
+
+.toast.show {
+    visibility: visible;
+    animation: fadein 0.5s, fadeout 0.5s 3s forwards; 
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes fadeout {
+    from { opacity: 1; }
+    to { opacity: 0; }
+}
