Added hamburger menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,36 @@
     from { opacity: 1; }
     to { opacity: 0; }
 }
+
+@keyframes slide1 {
+    100% {
+        transform: translateY(0);
+    }
+}
+@keyframes slide-in {
+    0% {
+        transform: translateY(-50%);
+        opacity: 0; 
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slide-up {
+    0% {
+        transform: translateY(100%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.animate-slide-in {
+    animation: slide-in 0.5s forwards;
+}
+
+.animate-slide-out {
+    animation: slide-up 0.5s forwards;
+}
